refak: refactoring such that transaction entities serve as main objects within accounting core module