@@ -1,20 +1,21 @@
 package org.cardanofoundation.lob.app.accounting_reporting_core.service.business_rules.items;
 
 import lombok.val;
-import org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.Organisation;
 import org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.Transaction;
 import org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.TransactionItem;
-import org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.TransactionType;
+import org.cardanofoundation.lob.app.accounting_reporting_core.domain.entity.Organisation;
+import org.cardanofoundation.lob.app.accounting_reporting_core.domain.entity.TransactionEntity;
+import org.cardanofoundation.lob.app.accounting_reporting_core.domain.entity.TransactionItemEntity;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
-import java.util.Optional;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.TransactionType.BillCredit;
 import static org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.TransactionType.FxRevaluation;
 import static org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.ValidationStatus.FAILED;
+import static org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.ValidationStatus.VALIDATED;
 import static org.cardanofoundation.lob.app.accounting_reporting_core.domain.core.Violation.Code.ACCOUNT_CODE_DEBIT_IS_EMPTY;
 
 class AccountCodeDebitCheckTaskItemTest {
@@ -27,72 +28,65 @@ class AccountCodeDebitCheckTaskItemTest {
     }
 
     @Test
-    // if we have debit amount then it should be fine
-    public void testCreditWorks() {
+    public void testDebitWorks() {
         val txId = Transaction.id("1", "1");
 
-        val txs = Transaction.builder()
-                .id(txId)
-                .internalTransactionNumber("1")
-                .organisation(Organisation.builder().id("1").build())
-                .transactionType(FxRevaluation)
-                .items(
-                        Set.of(TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "0"))
-                                .accountCodeDebit(Optional.of("1"))
-                                .build()
-                        ))
-                .build();
+        val txItem = new TransactionItemEntity();
+        txItem.setId(TransactionItem.id(txId, "0"));
+        txItem.setAccountCodeDebit("1");
 
-        val newTx = taskItem.run(txs);
+        val tx = new TransactionEntity();
+        tx.setId(txId);
+        tx.setTransactionInternalNumber("1");
+        tx.setOrganisation(Organisation.builder().id("1").build());
+        tx.setTransactionType(FxRevaluation);
+        tx.setItems(Set.of(txItem));
 
-        assertThat(newTx.getViolations()).isEmpty();
+        taskItem.run(tx);
+
+        assertThat(tx.getValidationStatus()).isEqualTo(VALIDATED);
+        assertThat(tx.getViolations()).isEmpty();
     }
 
     @Test
-    // if we don't have debit amount then error should be raised
     public void testAccountDebitCheckError() {
         val txId = Transaction.id("1", "1");
 
-        val txs = Transaction.builder()
-                .id(txId)
-                .internalTransactionNumber("1")
-                .organisation(Organisation.builder().id("1").build())
-                .transactionType(TransactionType.BillCredit)
-                .items(
-                        Set.of(TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "0"))
-                                .build()
-                        ))
-                .build();
+        val txItem = new TransactionItemEntity();
+        txItem.setId(TransactionItem.id(txId, "0"));
 
-        val newTx = taskItem.run(txs);
+        val tx = new TransactionEntity();
+        tx.setId(txId);
+        tx.setTransactionInternalNumber("1");
+        tx.setOrganisation(Organisation.builder().id("1").build());
+        tx.setTransactionType(BillCredit);
+        tx.setItems(Set.of(txItem));
 
-        assertThat(newTx.getValidationStatus()).isEqualTo(FAILED);
-        assertThat(newTx.getViolations()).hasSize(1);
-        assertThat(newTx.getViolations().iterator().next().code()).isEqualTo(ACCOUNT_CODE_DEBIT_IS_EMPTY);
+        taskItem.run(tx);
+
+        assertThat(tx.getValidationStatus()).isEqualTo(FAILED);
+        assertThat(tx.getViolations()).hasSize(1);
+        assertThat(tx.getViolations().iterator().next().getCode()).isEqualTo(ACCOUNT_CODE_DEBIT_IS_EMPTY);
     }
 
     @Test
-    // we skip transaction type: FxRevaluation from this check
     public void testAccountDebitCheckSkipFxRevaluation() {
         val txId = Transaction.id("1", "1");
 
-        val txs = Transaction.builder()
-                .id(txId)
-                .internalTransactionNumber("1")
-                .organisation(Organisation.builder().id("1").build())
-                .transactionType(FxRevaluation)
-                .items(
-                        Set.of(TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "0"))
-                                .build()
-                        ))
-                .build();
+        val txItem = new TransactionItemEntity();
+        txItem.setId(TransactionItem.id(txId, "0"));
 
-        val newTx = taskItem.run(txs);
+        val tx = new TransactionEntity();
+        tx.setId(txId);
+        tx.setTransactionInternalNumber("1");
+        tx.setOrganisation(Organisation.builder().id("1").build());
+        tx.setTransactionType(FxRevaluation);
+        tx.setItems(Set.of(txItem));
 
-        assertThat(newTx.getViolations()).isEmpty();
+        taskItem.run(tx);
+
+        assertThat(tx.getValidationStatus()).isEqualTo(VALIDATED);
+        assertThat(tx.getViolations()).isEmpty();
     }
 
     // Multiple Items with Mixed Debit Status
@@ -100,53 +94,48 @@ class AccountCodeDebitCheckTaskItemTest {
     public void testMixedDebitItems() {
         val txId = Transaction.id("2", "1");
 
-        val txs = Transaction.builder()
-                .id(txId)
-                .internalTransactionNumber("2")
-                .organisation(Organisation.builder().id("1").build())
-                .transactionType(TransactionType.BillCredit)
-                .items(Set.of(
-                        TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "1"))
-                                .accountCodeDebit(Optional.of("100"))
-                                .build(),
-                        TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "2"))
-                                .build()
-                ))
-                .build();
+        val txItem1 = new TransactionItemEntity();
+        txItem1.setId(TransactionItem.id(txId, "1"));
+        txItem1.setAccountCodeDebit("100");
 
-        val newTx = taskItem.run(txs);
+        val txItem2 = new TransactionItemEntity();
+        txItem2.setId(TransactionItem.id(txId, "2"));
 
-        assertThat(newTx.getValidationStatus()).isEqualTo(FAILED);
-        assertThat(newTx.getViolations()).hasSize(1);
+        val tx = new TransactionEntity();
+        tx.setId(txId);
+        tx.setTransactionInternalNumber("2");
+        tx.setOrganisation(Organisation.builder().id("1").build());
+        tx.setTransactionType(BillCredit);
+        tx.setItems(Set.of(txItem1, txItem2));
+
+        taskItem.run(tx);
+
+        assertThat(tx.getValidationStatus()).isEqualTo(FAILED);
+        assertThat(tx.getViolations()).hasSize(1);
     }
 
     // All Items without Debit
-
     @Test
     public void testAllItemsWithoutDebit() {
         val txId = Transaction.id("3", "1");
 
-        val txs = Transaction.builder()
-                .id(txId)
-                .internalTransactionNumber("3")
-                .organisation(Organisation.builder().id("1").build())
-                .transactionType(TransactionType.BillCredit)
-                .items(Set.of(
-                        TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "3"))
-                                .build(),
-                        TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "4"))
-                                .build()
-                ))
-                .build();
+        val txItem1 = new TransactionItemEntity();
+        txItem1.setId(TransactionItem.id(txId, "3"));
 
-        val newTx = taskItem.run(txs);
+        val txItem2 = new TransactionItemEntity();
+        txItem2.setId(TransactionItem.id(txId, "4"));
 
-        assertThat(newTx.getValidationStatus()).isEqualTo(FAILED);
-        assertThat(newTx.getViolations()).hasSize(2);
+        val tx = new TransactionEntity();
+        tx.setId(txId);
+        tx.setTransactionInternalNumber("3");
+        tx.setOrganisation(Organisation.builder().id("1").build());
+        tx.setTransactionType(BillCredit);
+        tx.setItems(Set.of(txItem1, txItem2));
+
+        taskItem.run(tx);
+
+        assertThat(tx.getValidationStatus()).isEqualTo(FAILED);
+        assertThat(tx.getViolations()).hasSize(2);
     }
 
     // Debit Code is an Empty String
@@ -154,23 +143,21 @@ class AccountCodeDebitCheckTaskItemTest {
     public void testItemWithEmptyStringDebit() {
         val txId = Transaction.id("4", "1");
 
-        val txs = Transaction.builder()
-                .id(txId)
-                .internalTransactionNumber("4")
-                .organisation(Organisation.builder().id("1").build())
-                .transactionType(TransactionType.BillCredit)
-                .items(Set.of(
-                        TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "5"))
-                                .accountCodeDebit(Optional.of(""))
-                                .build()
-                ))
-                .build();
+        val txItem1 = new TransactionItemEntity();
+        txItem1.setId(TransactionItem.id(txId, "5"));
+        txItem1.setAccountCodeDebit("");
 
-        val newTx = taskItem.run(txs);
+        val tx = new TransactionEntity();
+        tx.setId(txId);
+        tx.setTransactionInternalNumber("4");
+        tx.setOrganisation(Organisation.builder().id("1").build());
+        tx.setTransactionType(BillCredit);
+        tx.setItems(Set.of(txItem1));
 
-        assertThat(newTx.getValidationStatus()).isEqualTo(FAILED);
-        assertThat(newTx.getViolations()).hasSize(1);
+        taskItem.run(tx);
+
+        assertThat(tx.getValidationStatus()).isEqualTo(FAILED);
+        assertThat(tx.getViolations()).hasSize(1);
     }
 
     // Transaction with No Items
@@ -178,17 +165,16 @@ class AccountCodeDebitCheckTaskItemTest {
     public void testTransactionWithNoItems() {
         val txId = Transaction.id("5", "1");
 
-        val txs = Transaction.builder()
-                .id(txId)
-                .internalTransactionNumber("5")
-                .organisation(Organisation.builder().id("1").build())
-                .transactionType(TransactionType.BillCredit)
-                .items(Collections.emptySet())
-                .build();
+        val tx = new TransactionEntity();
+        tx.setId(txId);
+        tx.setTransactionInternalNumber("5");
+        tx.setOrganisation(Organisation.builder().id("1").build());
+        tx.setTransactionType(BillCredit);
+        tx.setItems(Set.of());
 
-        val newTx = taskItem.run(txs);
+        taskItem.run(tx);
 
-        assertThat(newTx.getViolations()).isEmpty();
+        assertThat(tx.getViolations()).isEmpty();
     }
 
     // Valid Debit with Whitespace
@@ -196,22 +182,21 @@ class AccountCodeDebitCheckTaskItemTest {
     public void testValidDebitWithWhitespace() {
         val txId = Transaction.id("6", "1");
 
-        val txs = Transaction.builder()
-                .id(txId)
-                .internalTransactionNumber("6")
-                .organisation(Organisation.builder().id("1").build())
-                .transactionType(TransactionType.BillCredit)
-                .items(Set.of(
-                        TransactionItem.builder()
-                                .id(TransactionItem.id(txId, "6"))
-                                .accountCodeDebit(Optional.of(" 100 "))
-                                .build()
-                ))
-                .build();
+        val txItem = new TransactionItemEntity();
+        txItem.setId(TransactionItem.id(txId, "6"));
+        txItem.setAccountCodeDebit(" 100 ");
 
-        val newTx = taskItem.run(txs);
+        val tx = new TransactionEntity();
+        tx.setId(txId);
+        tx.setTransactionInternalNumber("6");
+        tx.setOrganisation(Organisation.builder().id("1").build());
+        tx.setTransactionType(BillCredit);
+        tx.setItems(Set.of(txItem));
 
-        assertThat(newTx.getViolations()).isEmpty();
+        taskItem.run(tx);
+
+        assertThat(tx.getValidationStatus()).isEqualTo(VALIDATED);
+        assertThat(tx.getViolations()).isEmpty();
     }
 
 }
